# cv

./: .gitignore  BUILD.opencv  WORKSPACE
hello_world/: BUILD.bazel  hello-world.cc
qrcode/: .gitignore  BUILD.bazel  TODO  array_walker.cc  array_walker.h  array_walker_test.cc  bch.cc  bch.h  bch_new.cc  bch_new.h  bch_new_test.cc  bch_test.cc  bits.h  cv_utils.cc  cv_utils.h  debug_image.cc  debug_image.h  gf.cc  gf.h  gf_mat.cc  gf_mat.h  gf_mat_test.cc  gf_test.cc  integration_test.sh  notes  pixel_iterator.cc  pixel_iterator.h  pixel_iterator_test.cc  point.cc  point.h  qr.cc  qr.h  qr_array.cc  qr_array.h  qr_array_test.cc  qr_attributes.cc  qr_attributes.h  qr_attributes_test.cc  qr_decode.cc  qr_decode.h  (+52 more)
qrcode/samples/: README
qrcode/testdata/: spec_example_1m.txt  spec_example_1m_unmasked.txt  straight.txt  v2h.txt
qrcode/util/: BUILD.bazel  bch3.c  extractor.cc  gf_gen.cc  gf_gen_inverse.cc  gf_play.cc  runs.cc  spin.cc
