package(default_visibility = ["//qrcode:__subpackages__"])

cc_binary(
    name = "qrcode",
    srcs = ["qr_main.cc"],
    deps = [
        ":debug_image",
        ":point",
        ":qr_locate",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@opencv",
    ],
)

cc_library(
    name = "runner",
    srcs = ["runner.cc"],
    hdrs = ["runner.h"],
    deps = [
        ":pixel_iterator",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "runner_test",
    size = "small",
    srcs = ["runner_test.cc"],
    deps = [
        ":runner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_locate",
    srcs = ["qr_locate.cc"],
    hdrs = ["qr_locate.h"],
    deps = [
        ":pixel_iterator",
        ":point",
        ":qr_locate_utils",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:variant",
        "@opencv",
    ],
)

cc_test(
    name = "qr_locate_test",
    size = "small",
    srcs = ["qr_locate_test.cc"],
    data = [
        ":testdata/straight.png",
        ":testdata/tilt.png",
    ],
    deps = [
        ":qr_locate",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_locate_utils",
    srcs = ["qr_locate_utils.cc"],
    hdrs = ["qr_locate_utils.h"],
    deps = [
        ":pixel_iterator",
        ":point",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "qr_locate_utils_test",
    size = "small",
    srcs = ["qr_locate_utils_test.cc"],
    deps = [
        ":qr_locate",
        "@com_google_absl//absl/base",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "pixel_iterator",
    hdrs = ["pixel_iterator.h"],
)

cc_test(
    name = "pixel_iterator_test",
    size = "small",
    srcs = ["pixel_iterator_test.cc"],
    deps = [
        ":pixel_iterator",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "debug_image",
    srcs = ["debug_image.cc"],
    hdrs = ["debug_image.h"],
    deps = [
        ":point",
        "@com_google_absl//absl/memory",
        "@opencv",
    ],
)

cc_library(
    name = "point",
    srcs = ["point.cc"],
    hdrs = ["point.h"],
    deps = ["@com_google_absl//absl/strings"],
)

cc_library(
    name = "qr_types",
    srcs = ["qr_types.cc"],
    hdrs = ["qr_types.h"],
    deps = [":point"],
)

cc_library(
    name = "qr_extract",
    srcs = ["qr_extract.cc"],
    hdrs = ["qr_extract.h"],
    deps = [
        ":point",
        ":qr_locate",
        ":qr_types",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/types:variant",
        "@opencv",
    ],
)

cc_test(
    name = "qr_extract_test",
    size = "small",
    srcs = ["qr_extract_test.cc"],
    data = [
        ":testdata/tilt.png",
    ],
    deps = [
        ":qr_extract",
        "@com_google_googletest//:gtest_main",
    ],
)
