package(default_visibility = ["//qrcode:__subpackages__"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

cc_binary(
    name = "qrcode",
    srcs = ["qr_main.cc"],
    deps = [
        ":cv_utils",
        ":debug_image",
        ":point",
        ":qr_locate",
        ":qr_normalize",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@opencv",
    ],
)

cc_library(
    name = "runner",
    srcs = ["runner.cc"],
    hdrs = ["runner.h"],
    deps = [
        ":pixel_iterator",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:span",
    ],
)

cc_test(
    name = "runner_test",
    size = "small",
    srcs = ["runner_test.cc"],
    deps = [
        ":runner",
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_locate",
    srcs = ["qr_locate.cc"],
    hdrs = ["qr_locate.h"],
    deps = [
        ":pixel_iterator",
        ":point",
        ":qr_locate_utils",
        ":qr_types",
        ":qr_utils",
        ":runner",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:variant",
        "@opencv",
    ],
)

cc_test(
    name = "qr_locate_test",
    size = "small",
    srcs = ["qr_locate_test.cc"],
    data = [
        ":testdata/straight.png",
        ":testdata/tilt.png",
    ],
    deps = [
        ":qr_locate",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_locate_utils",
    srcs = ["qr_locate_utils.cc"],
    hdrs = ["qr_locate_utils.h"],
    deps = [
        ":pixel_iterator",
        ":point",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "qr_locate_utils_test",
    size = "small",
    srcs = ["qr_locate_utils_test.cc"],
    deps = [
        ":qr_locate",
        ":testutils",
        "@com_google_absl//absl/base",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "pixel_iterator",
    srcs = ["pixel_iterator.cc"],
    hdrs = ["pixel_iterator.h"],
    deps = [
        ":qr_types",
        "@opencv",
    ],
)

cc_test(
    name = "pixel_iterator_test",
    size = "small",
    srcs = ["pixel_iterator_test.cc"],
    deps = [
        ":pixel_iterator",
        ":qr_types",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "debug_image",
    srcs = ["debug_image.cc"],
    hdrs = ["debug_image.h"],
    deps = [
        ":point",
        "@com_google_absl//absl/memory",
        "@opencv",
    ],
)

cc_library(
    name = "point",
    srcs = ["point.cc"],
    hdrs = ["point.h"],
    deps = ["@com_google_absl//absl/strings"],
)

cc_library(
    name = "qr_types",
    srcs = ["qr_types.cc"],
    hdrs = ["qr_types.h"],
    deps = [":point"],
)

cc_library(
    name = "qr_array",
    srcs = ["qr_array.cc"],
    hdrs = ["qr_array.h"],
    deps = [
        ":point",
    ],
)

cc_test(
    name = "qr_array_test",
    srcs = ["qr_array_test.cc"],
    deps = [
        ":qr_array",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_normalize",
    srcs = ["qr_normalize.cc"],
    hdrs = ["qr_normalize.h"],
    deps = [
        ":pixel_iterator",
        ":point",
        ":qr_locate",
        ":qr_normalize_utils",
        ":qr_types",
        ":qr_utils",
        ":runner",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:variant",
        "@opencv",
    ],
)

cc_test(
    name = "qr_normalize_test",
    size = "small",
    srcs = ["qr_normalize_test.cc"],
    data = [
        ":testdata/tilt.png",
    ],
    deps = [
        ":qr_normalize",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_normalize_utils",
    srcs = ["qr_normalize_utils.cc"],
    hdrs = ["qr_normalize_utils.h"],
    deps = [
        ":pixel_iterator",
        ":qr_types",
        ":runner",
    ],
)

cc_test(
    name = "qr_normalize_utils_test",
    size = "small",
    srcs = ["qr_normalize_utils_test.cc"],
    deps = [
        ":pixel_iterator",
        ":qr_normalize_utils",
        ":qr_types",
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_extract",
    srcs = ["qr_extract.cc"],
    hdrs = ["qr_extract.h"],
    deps = [
        ":debug_image",
        ":pixel_iterator",
        ":qr_array",
        ":qr_normalize",
        ":qr_types",
        ":runner",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "qr_extract_test",
    size = "small",
    srcs = ["qr_extract_test.cc"],
    data = [
        ":testdata/straight.png",
        ":testdata/straight.txt",
    ],
    deps = [
        ":qr_array",
        ":qr_extract",
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_decode",
    srcs = ["qr_decode.cc"],
    hdrs = ["qr_decode.h"],
    deps = [
        ":qr_array",
        ":qr_attributes",
        ":qr_decode_utils",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "qr_decode_test",
    srcs = ["qr_decode_test.cc"],
    data = [
        ":testdata/straight.txt",
    ],
    deps = [
        ":qr_array",
        ":qr_decode",
        ":testutils",
        "@com_google_absl//absl/types:variant",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_decode_utils",
    srcs = ["qr_decode_utils.cc"],
    hdrs = ["qr_decode_utils.h"],
    deps = [
        ":bch",
        ":gf",
        ":qr_array",
        ":qr_attributes",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "qr_decode_utils_test",
    size = "small",
    srcs = ["qr_decode_utils_test.cc"],
    data = [
        ":testdata/spec_example_1m.txt",
    ],
    deps = [
        ":qr_decode_utils",
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_utils",
    srcs = ["qr_utils.cc"],
    hdrs = ["qr_utils.h"],
    deps = [":qr_types"],
)

cc_test(
    name = "qr_utils_test",
    size = "small",
    srcs = ["qr_utils_test.cc"],
    deps = [
        ":qr_utils",
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "gf",
    srcs = ["gf.cc"],
    hdrs = ["gf.h"],
    deps = [
        "@com_google_absl//absl/base",
    ],
)

cc_test(
    name = "gf_test",
    srcs = ["gf_test.cc"],
    deps = [
        ":bits",
        ":gf",
        "@com_google_absl//absl/base",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "bch",
    srcs = ["bch.cc"],
    hdrs = ["bch.h"],
    deps = [
        ":gf",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "bch_test",
    srcs = ["bch_test.cc"],
    deps = [
        ":bch",
        "@com_google_absl//absl/memory",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "testutils",
    testonly = 1,
    srcs = ["testutils.cc"],
    hdrs = ["testutils.h"],
    deps = [
        ":qr_array",
        ":qr_types",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "testutils_test",
    size = "small",
    srcs = ["testutils_test.cc"],
    deps = [
        ":testutils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "bits",
    testonly = 1,
    hdrs = ["bits.h"],
)

cc_library(
    name = "stl_logging",
    srcs = ["stl_logging.cc"],
    hdrs = ["stl_logging.h"],
)

go_binary(
    name = "qr_error_characteristics_converter",
    srcs = ["qr_error_characteristics_converter.go"],
)

genrule(
    name = "qr_error_characteristics_genrule",
    srcs = ["qr_error_characteristics_data.tsv"],
    outs = ["qr_error_characteristics_data.h"],
    cmd = "./$(location qr_error_characteristics_converter) " +
          "--header_guard $$(echo $(rootpath qr_error_characteristics_data.h) | " +
          "                    tr '[a-z]' '[A-Z]' | " +
          "                    sed -e 's/^/_/' -e 's/$$/_/' -e 's/[./]/_/g') " +
          "--input $(location qr_error_characteristics_data.tsv) " +
          "--output $@",
    tools = [":qr_error_characteristics_converter"],
)

cc_library(
    name = "qr_error_characteristics",
    srcs = [
        "qr_error_characteristics.cc",
        "qr_error_characteristics.impl.h",
        "qr_error_characteristics_data.h",
        "qr_error_characteristics_types.cc",
    ],
    hdrs = [
        "qr_error_characteristics.h",
        "qr_error_characteristics_types.h",
    ],
    deps = [
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "qr_error_characteristics_test",
    size = "small",
    srcs = ["qr_error_characteristics_test.cc"],
    deps = [
        ":qr_error_characteristics",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "qr_attributes",
    srcs = ["qr_attributes.cc"],
    hdrs = ["qr_attributes.h"],
    deps = [
        ":point",
        ":qr_error_characteristics",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_test(
    name = "qr_attributes_test",
    size = "small",
    srcs = ["qr_attributes_test.cc"],
    deps = [
        ":qr_attributes",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "cv_utils",
    srcs = ["cv_utils.cc"],
    hdrs = ["cv_utils.h"],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings:str_format",
        "@opencv",
    ],
)

cc_library(
    name = "array_walker",
    srcs = ["array_walker.cc"],
    hdrs = ["array_walker.h"],
    deps = [
        ":point",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "array_walker_test",
    size = "small",
    srcs = ["array_walker_test.cc"],
    deps = [
        ":array_walker",
        "@com_google_googletest//:gtest_main",
    ],
)
