cc_binary(
    name = "spin",
    srcs = ["spin.cc"],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_binary(
    name = "runs",
    srcs = ["runs.cc"],
    deps = [
        "//qrcode:cv_utils",
        "//qrcode:pixel_iterator",
        "//qrcode:qr_types",
        "//qrcode:runner",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@opencv",
    ],
)

cc_binary(
    name = "bch3",
    srcs = ["bch3.c"],
)

cc_binary(
    name = "gf_gen",
    srcs = ["gf_gen.cc"],
    deps = [
        "//qrcode:gf",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_binary(
    name = "extractor",
    srcs = ["extractor.cc"],
    visibility = ["//qrcode:__subpackages__"],
    deps = [
        "//qrcode:cv_utils",
        "//qrcode:point",
        "//qrcode:qr_error_characteristics",
        "//qrcode:qr_extract",
        "//qrcode:qr_format",
        "//qrcode:qr_locate",
        "//qrcode:qr_normalize",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:variant",
        "@opencv",
    ],
)

cc_binary(
    name = "gf_play",
    srcs = ["gf_play.cc"],
    deps = [
        "//qrcode:gf",
        "//qrcode:stl_logging",
        "@com_google_absl//absl/types:variant",
    ],
)
